<resources>
    <string name="app_name">Calculator_App</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="pi">𝜋</string>
    <string name="log">log</string>
    <string name="brace2">)</string>
    <string name="ln">ln</string>
    <string name="brace1">(</string>
    <string name="exp">exp</string>
    <string name="tan">tan</string>
    <string name="sin">sin</string>
    <string name="cos">COS</string>
    <string name="sinh">sinh</string>
    <string name="acosh">ACOSH</string>
    <string name="asin">ASIN</string>
    <string name="atan">Atan</string>
    <string name="percent">%</string>
    <string name="pow">pow</string>
    <string name="tanh">tanh</string>
    <string name="nine">9</string>
    <string name="ac">AC</string>
    <string name="del">Del</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="six">6</string>
    <string name="div">/</string>
    <string name="mult">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="two">2</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="three">3</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="ans">Ans</string>
    <string name="equal">=</string>
    <string name="sqrt">sqrt</string>
    <string name="normal">Normal</string>
    <string name="scientifique">Scientifique</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="m">M+</string>
    <string name="m_minus">M-</string>
    <string name="c">C</string>
    <string name="erase">erase</string>
    <string name="mod">%</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multip">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="addition">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="substract">-</string>
    <string name="_0">0</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="parenthis">(</string>
    <string name="parenthisEnd">)</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_main3">MainActivity3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Authentification">Authentification</string>
    <string name="Login">Login</string>

    <string name="Value" />
    <string name="add">add</string>
    <string name="login">login</string>
    <string name="AddUser">Add User</string>
    <string name="logout">Logout</string>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID_HERE</string>


</resources>