<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/data_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text=""
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/result_tv"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.543" />

        <TextView
            android:id="@+id/result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="64"
            android:text=""
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/data_tv"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="1dp">

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/linecolor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    style="@style/digitbutton"
                    android:onClick="onOperatorClick"
                    android:textSize="16sp"
                    android:backgroundTint="@color/btnBackground"
                    android:text="@string/mc" />

                <com.google.android.material.button.MaterialButton
                    style="@style/digitbutton"
                    android:onClick="onOperatorClick"
                    android:textSize="16sp"
                    android:backgroundTint="@color/btnBackground"
                    android:text="@string/mr" />

                <com.google.android.material.button.MaterialButton
                    style="@style/digitbutton"
                    android:onClick="onOperatorClick"
                    android:backgroundTint="@color/btnBackground"
                    android:text="@string/m" />

                <com.google.android.material.button.MaterialButton
                    style="@style/digitbutton"
                    android:backgroundTint="@color/btnBackground"
                    android:onClick="onOperatorClick"
                    android:text="@string/m_minus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    style="@style/operatorbutton"
                    android:id="@+id/btn_clear"
                    android:textSize="30sp"
                    android:backgroundTint="@color/btnBackground"
                    android:onClick="onClearClick"
                    android:text="@string/c"
                    />

                <com.google.android.material.button.MaterialButton
                    style="@style/digitbutton"
                    android:layout_width="72dp"
                    android:text="@string/erase"
                    android:backgroundTint="@color/btnBackground"
                    android:onClick="onBackClick"
                    app:icon="@drawable/baseline_backspace_24"
                    app:iconTint="@color/black" />

                <com.google.android.material.button.MaterialButton
                    style="@style/operatorbutton"
                    android:id="@+id/btn_modulo"
                    android:onClick="onOperatorClick"
                    android:textSize="30sp"
                    android:backgroundTint="@color/btnBackground"
                    android:text="@string/mod"
                    />
                <com.google.android.material.button.MaterialButton
                    style="@style/operatorbutton"
                    android:id="@+id/btn_divide"
                    android:onClick="onOperatorClick"
                    android:textSize="30sp"
                    android:backgroundTint="@color/btnBackground"
                    android:text="@string/divide"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    style="@style/digitbutton"
                    android:id="@+id/btn_7"
                    android:onClick="onDigitClick"
                    android:text="@string/_7" />

                <com.google.android.material.button.MaterialButton
                    style="@style/digitbutton"
                    android:id="@+id/btn_8"
                    android:onClick="onDigitClick"
                    android:text="@string/_8" />

                <com.google.android.material.button.MaterialButton
                    style="@style/digitbutton"
                    android:id="@+id/btn_9"
                    android:onClick="onDigitClick"
                    android:text="@string/_9" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_multiply"
                    style="@style/operatorbutton"
                    android:onClick="onOperatorClick"
                    android:textSize="30sp"
                    android:backgroundTint="@color/btnBackground"
                    android:text="@string/multip" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    style="@style/digitbutton"
                    android:id="@+id/btn_4"
                    android:onClick="onDigitClick"
                    android:text="@string/_4"
                    />
                <com.google.android.material.button.MaterialButton
                    style="@style/digitbutton"
                    android:id="@+id/btn_5"
                    android:onClick="onDigitClick"
                    android:text="@string/_5"
                    />
                <com.google.android.material.button.MaterialButton
                    style="@style/digitbutton"
                    android:id="@+id/btn_6"
                    android:onClick="onDigitClick"
                    android:text="@string/_6"
                    />
                <com.google.android.material.button.MaterialButton
                    style="@style/operatorbutton"
                    android:id="@+id/btn_add"
                    android:onClick="onOperatorClick"
                    android:textSize="30sp"
                    android:backgroundTint="@color/btnBackground"
                    android:text="@string/addition"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    style="@style/digitbutton"
                    android:id="@+id/btn_1"
                    android:onClick="onDigitClick"
                    android:text="@string/_1"
                    />
                <com.google.android.material.button.MaterialButton
                    style="@style/digitbutton"
                    android:id="@+id/btn_2"
                    android:onClick="onDigitClick"
                    android:text="@string/_2"
                    />
                <com.google.android.material.button.MaterialButton
                    style="@style/digitbutton"
                    android:id="@+id/btn_3"
                    android:onClick="onDigitClick"
                    android:text="@string/_3"
                    />

                <com.google.android.material.button.MaterialButton
                    style="@style/operatorbutton"
                    android:id="@+id/btn_substract"
                    android:onClick="onOperatorClick"
                    android:textSize="30sp"
                    android:backgroundTint="@color/btnBackground"
                    android:text="@string/substract" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_allclear"
                    style="@style/operatorbutton"
                    android:onClick="onAllclearClick"
                    android:textSize="18sp"
                    android:backgroundTint="@color/btnBackground"
                    android:text="@string/ac"
                    />
                <com.google.android.material.button.MaterialButton

                    style="@style/digitbutton"
                    android:id="@+id/btn_0"
                    android:onClick="onDigitClick"
                    android:text="@string/_0"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_dot"
                    style="@style/digitbutton"
                    android:onClick="onDigitClick"
                    android:text="@string/dot"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_equal"
                    style="@style/operatorbutton"
                    android:onClick="onEqualClick"
                    android:backgroundTint="@color/btnBackground2"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:text="@string/equal"
                    />
            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"

        />
</androidx.drawerlayout.widget.DrawerLayout>