<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="230dp"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Authentification"
            android:textAlignment="center"
            android:textDirection="rtl"
            android:textIsSelectable="false"

            android:textSize="24sp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/person">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="text|textEmailAddress" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <Button
            android:id="@+id/Valider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:hint="Valider"

            android:text="Button" />
        <FrameLayout
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="245dp"
            android:layout_marginTop="90dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:text="Remove User"></TextView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/remove_User"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:contentDescription="@string/add"
                android:focusable="true"

                app:srcCompat="@drawable/baseline_person_remove_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="245dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/AddUser"></TextView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_User"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:contentDescription="@string/add"
                android:focusable="true"


                app:srcCompat="@drawable/baseline_person_add_alt_24" />
        </LinearLayout>
        </FrameLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:contentDescription="@string/add"
                android:focusable="true"

                app:srcCompat="@drawable/add"
                android:layout_marginLeft="340dp"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>